Fixed misalignments in several areas with this small tweak.

--- a/templates/style.css
+++ b/templates/style.css
@@ -38,7 +38,7 @@ main,
     padding: 2rem;
     max-width: var(--max-width);
     margin: 0 auto;
-    width: 100%;
+    /* width: 100%; */
     align-items: center;
 }
 
